White space fix

--- a/css/print/pdf.css
+++ b/css/print/pdf.css
@@ -117,3 +117,13 @@ ul, ol, div, p {
 	page-break-after: always !important;
 
 	visibility: visible !important;
+	position: relative !important;
+	width: 100% !important;
+	height: 229mm !important;
+	min-height: 229mm !important;
+	display: block !important;
+	overflow: hidden !important;
+
+	left: 0 !important;
+	top: 0 !important;
+	margin
